[FLINK-24041][connectors] changed List.of to Arrays.asList